--- a/train1.ipynb
+++ b/train1.ipynb
@@ -9,7 +9,7 @@
       "toc_visible": true,
       "machine_shape": "hm",
       "mount_file_id": "1I5Qimt-oDk7iPkUiBOs5NLVaN0Jc2dcx",
-      "authorship_tag": "ABX9TyMfkQVvNN03z0ttkr+/iTgE",
+      "authorship_tag": "ABX9TyPEx/Xns2SEH8K5FGaPOZjY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "from PIL import Image\n",
         "import keras"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,13 +91,13 @@
       "source": [
         "paths=['/content/drive/My Drive/asl_dataset']\n",
         "\n",
-        "x_train = []  # training lists\n",
+        "x_train = [] \n",
         "y_train = []\n",
-        "nb_classes = 36 # number of classes\n",
-        "img_rows, img_cols = 400, 400  # size of training images\n",
-        "img_channels = 3  # BGR channels\n",
+        "nb_classes = 36 \n",
+        "img_rows, img_cols = 400, 400  \n",
+        "img_channels = 3  \n",
         "batch_size = 32\n",
-        "nb_epoch = 15  # iterations for training\n",
+        "nb_epoch = 15 \n",
         "data_augmentation = True"
       ],
       "execution_count": 0,
@@ -169,16 +169,12 @@
         "            for filename in filenames:\n",
         "                if filename.endswith(\".jpeg\"):\n",
         "                    fullpath = os.path.join(root, filename)\n",
-        "                    #print(fullpath)\n",
         "                    img = load_img(fullpath)\n",
         "                    img = img_to_array(img)\n",
         "                    x_train.append(img)\n",
-        "                    #str=fullpath.split(\"/\")\n",
         "                    ind=fullpath.rindex('/')\n",
         "                    s=fullpath[ind-1]\n",
-        "                    #print(s)\n",
         "                    y_train.append(classes[s.upper()])\n",
-        "                    #print(,\" --> appended\")\n",
         "    print(\"data set loaded\")"
       ],
       "execution_count": 0,
@@ -230,7 +226,6 @@
       },
       "source": [
         "def train_model(model, X_train, Y_train):\n",
-        "    # let's train the model using SGD + momentum (how original).\n",
         "    sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
         "    model.compile(loss='categorical_crossentropy',\n",
         "                  optimizer=sgd,\n",
@@ -254,23 +249,15 @@
       "source": [
         "def trainData():\n",
         "    load_data_set()\n",
-        "    #print(\"in\")\n",
         "    a = numpy.asarray(y_train)\n",
         "    y_train_new = a.reshape(a.shape[0], 1)\n",
-        "    #print(\"y_train_new\")\n",
         "    X_train = numpy.asarray(x_train).astype('float32')\n",
         "    X_train = X_train / 255.0\n",
         "    Y_train = np_utils.to_categorical(y_train_new, nb_classes)\n",
-        "    #print(\"y_train\")\n",
-        "    # run this if model is not saved.\n",
         "    model = make_network(numpy.asarray(x_train))\n",
         "    train_model(model,X_train,Y_train)\n",
-        "    #model.save(\"./asl_dataset/model2.model\")\n",
         "    \n",
         "    print(\"Model Built\")\n",
-        "\n",
-        "    # run this if model is already saved on disk.\n",
-        "    # model = keras.models.load_model('/home/snrao/IDE/PycharmProjects/ASL Finger Spelling Recognition/keras.model')\n",
         "\n",
         "    return model"
       ],
@@ -291,7 +278,7 @@
       "source": [
         "model=trainData()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,6 +410,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "YV0GC_0qpPft",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# run this if model is already saved on disk.\n",
+        "# model = keras.models.load_model('/content/drive/My Drive/asl_dataset/asl2.model')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "PwZMUJ_YGTMz",
         "colab_type": "code",
         "colab": {}
@@ -454,16 +455,16 @@
       "metadata": {
         "id": "XNAneZctKgM8",
         "colab_type": "code",
+        "outputId": "89d81df2-dcf1-4035-f800-fad9c1313b74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "89d81df2-dcf1-4035-f800-fad9c1313b74"
+        }
       },
       "source": [
         "prediction = model.predict([prepare(input())])"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +489,7 @@
       "source": [
         "prediction"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +521,7 @@
       "source": [
         "numpy.argmax(prediction)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +566,7 @@
         "  if classes[key]==c:\n",
         "    print(key)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
